--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "libphonenumber-js": "^1.10.49",
-    "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
+    "mui-phone-number": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
